feat: add all logic for getting a messenger id by name
