# internal/api/handlers/messenger_handler.go
@@ -81,6 +81,28 @@ func (h *MessengerHandler) GetMessenger(c *gin.Context) {
 	c.JSON(http.StatusOK, messenger)
 }
 
+// @Summary Get messenger ID by name
+// @Description Retrieves a messenger ID by its name
+// @Tags Messengers
+// @Produce json
+// @Param messenger_name path string true "Messenger name"
+// @Success 200 {object} map[string]int64
+// @Failure 400 {object} models.APIError
+// @Failure 500 {object} models.APIError
+// @Router /api/v1/messengers/by-name/{messenger_name} [get]
+func (h *MessengerHandler) GetMessengerIDByName(c *gin.Context) {
+	messengerName := c.Param("messenger_name")
+
+	messengerID, err := h.MessengerService.GetMessengerIDByName(messengerName)
+	if err != nil {
+		h.Logger.Error().Stack().Err(err).Msg("Error while getting a messenger ID by its name")
+		c.JSON(http.StatusInternalServerError, models.HTTPError(err, http.StatusInternalServerError))
+		return
+	}
+
+	c.JSON(http.StatusOK, messengerID)
+}
+
 // @Summary Сreate a new messenger-related user
 // @Description Сreates a new messenger-related user
 // @Tags Messengers
